--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 5rem 1.5rem;
+      padding: 3rem 1.5rem;
     }
 
     .hero-content {
-      max-width: 48rem;
+      max-width: 56rem;
       margin: 0 auto;
       text-align: center;
     }
@@ -90,6 +90,21 @@
       text-transform: uppercase;
       letter-spacing: 0.1em;
       font-weight: 600;
+    }
+
+    /* Game image showcase */
+    .game-showcase {
+      margin: 2rem 0;
+      max-width: 48rem;
+      width: 100%;
+    }
+
+    .game-image {
+      width: 100%;
+      height: auto;
+      border-radius: 1rem;
+      border: 2px solid rgba(52, 211, 153, 0.3);
+      box-shadow: 0 0 40px rgba(52, 211, 153, 0.3), 0 10px 60px rgba(0, 0, 0, 0.6);
     }
 
     /* Main headline */
@@ -221,94 +236,7 @@
     .cta-button:hover {
       background: #2cb87e;
       transform: scale(1.05);
-    }
-
-    /* Scroll indicator */
-    .scroll-indicator {
-      position: absolute;
-      bottom: 2rem;
-      left: 50%;
-      transform: translateX(-50%);
-      animation: bounce 1s infinite;
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateX(-50%) translateY(0); }
-      50% { transform: translateX(-50%) translateY(-10px); }
-    }
-
-    .chevron-icon {
-      width: 1.5rem;
-      height: 1.5rem;
-      color: #6b7280;
-    }
-
-    /* Features section */
-    .features {
-      position: relative;
-      z-index: 1;
-      padding: 5rem 1.5rem;
-      border-top: 1px solid rgba(52, 211, 153, 0.2);
-    }
-
-    .features-container {
-      max-width: 64rem;
-      margin: 0 auto;
-    }
-
-    .features-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 2rem;
-      margin-bottom: 3rem;
-    }
-
-    .feature-card {
-      text-align: center;
-      padding: 1.5rem;
-      background: rgba(17, 24, 39, 0.5);
-      border: 1px solid rgba(52, 211, 153, 0.2);
-      border-radius: 0.5rem;
-      backdrop-filter: blur(10px);
-      transition: border-color 0.3s ease;
-    }
-
-    .feature-card:hover {
-      border-color: rgba(52, 211, 153, 0.5);
-    }
-
-    .feature-icon {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 3rem;
-      height: 3rem;
-      border-radius: 50%;
-      background: rgba(52, 211, 153, 0.2);
-      border: 1px solid rgba(52, 211, 153, 0.4);
-      margin-bottom: 1rem;
-    }
-
-    .feature-icon svg {
-      width: 1.5rem;
-      height: 1.5rem;
-      color: #34d399;
-    }
-
-    .feature-title {
-      font-size: 1.125rem;
-      font-weight: 700;
-      margin-bottom: 0.75rem;
-    }
-
-    .feature-desc {
-      font-size: 0.875rem;
-      color: #9ca3af;
-    }
-
-    .features-cta {
-      text-align: center;
-      margin-top: 3rem;
+      box-shadow: 0 0 40px rgba(52, 211, 153, 0.6), 0 15px 50px rgba(0, 0, 0, 0.6);
     }
 
     /* Responsive design */
@@ -324,9 +252,6 @@
     @media (min-width: 768px) {
       .headline h1 {
         font-size: 5rem;
-      }
-      .features-grid {
-        grid-template-columns: repeat(3, 1fr);
       }
     }
   </style>
@@ -356,6 +281,15 @@
             <div class="headline-accent">INSIDER</div>
           </h1>
           <p class="subheadline">Live signals. Limited access.</p>
+        </div>
+
+        <!-- Game image showcase -->
+        <div class="game-showcase">
+          <img 
+            src="/images/2025-12-18-2018.jpg" 
+            alt="Chicken Road Game" 
+            class="game-image"
+          />
         </div>
 
         <!-- Terminal-style visual -->
@@ -399,68 +333,10 @@
 
         <!-- CTA Button -->
         <a href="https://t.me/yourchannel" class="cta-button" target="_blank" rel="noopener noreferrer">
-          Get Access
+          Get Access Now
         </a>
       </div>
-
-      <!-- Scroll indicator -->
-      <div class="scroll-indicator">
-        <svg class="chevron-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
-        </svg>
-      </div>
     </main>
-
-    <!-- Features section -->
-    <section class="features">
-      <div class="features-container">
-        <div class="features-grid">
-          <!-- Feature 1 -->
-          <div class="feature-card">
-            <div class="feature-icon">
-              <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/>
-              </svg>
-            </div>
-            <h3 class="feature-title">Instant Signals</h3>
-            <p class="feature-desc">Get notifications before the game starts</p>
-          </div>
-
-          <!-- Feature 2 -->
-          <div class="feature-card">
-            <div class="feature-icon">
-              <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <rect width="18" height="11" x="3" y="11" rx="2" ry="2"/>
-                <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
-              </svg>
-            </div>
-            <h3 class="feature-title">Private Group</h3>
-            <p class="feature-desc">Join exclusive Telegram community</p>
-          </div>
-
-          <!-- Feature 3 -->
-          <div class="feature-card">
-            <div class="feature-icon">
-              <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
-                <circle cx="9" cy="7" r="4"/>
-                <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
-                <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
-              </svg>
-            </div>
-            <h3 class="feature-title">Limited Slots</h3>
-            <p class="feature-desc">Only serious players allowed</p>
-          </div>
-        </div>
-
-        <!-- Bottom CTA -->
-        <div class="features-cta">
-          <a href="https://t.me/yourchannel" class="cta-button" target="_blank" rel="noopener noreferrer">
-            Enter Telegram
-          </a>
-        </div>
-      </div>
-    </section>
   </div>
 </body>
 </html>
