--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Join the exclusive Telegram channel for live Chicken Road signals. Limited access only.">
-  <title>Chicken Road Insider | Private Access</title>
+  <meta name="description" content="Tham gia kênh Telegram độc quyền để nhận tín hiệu Chicken Road trực tiếp. Chỉ có quyền truy cập giới hạn.">
+  <title>Chicken Road Insider | Truy Cập Riêng Tư</title>
   
   <style>
     * {
@@ -90,21 +90,6 @@
       text-transform: uppercase;
       letter-spacing: 0.1em;
       font-weight: 600;
-    }
-
-    /* Game image showcase */
-    .game-showcase {
-      margin: 2rem 0;
-      max-width: 48rem;
-      width: 100%;
-    }
-
-    .game-image {
-      width: 100%;
-      height: auto;
-      border-radius: 1rem;
-      border: 2px solid rgba(52, 211, 153, 0.3);
-      box-shadow: 0 0 40px rgba(52, 211, 153, 0.3), 0 10px 60px rgba(0, 0, 0, 0.6);
     }
 
     /* Main headline */
@@ -271,26 +256,22 @@
             <rect width="18" height="11" x="3" y="11" rx="2" ry="2"/>
             <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
           </svg>
-          <span class="badge-text">Private Access</span>
+          <!-- Translated to Vietnamese -->
+          <span class="badge-text">Truy Cập Riêng Tư</span>
         </div>
 
         <!-- Main headline -->
         <div class="headline">
           <h1>
+            <!-- Keeping title in English as requested -->
             <div>CHICKEN ROAD</div>
             <div class="headline-accent">INSIDER</div>
           </h1>
-          <p class="subheadline">Live signals. Limited access.</p>
+          <!-- Translated to Vietnamese -->
+          <p class="subheadline">Tín hiệu trực tiếp. Truy cập giới hạn.</p>
         </div>
 
-        <!-- Game image showcase -->
-        <div class="game-showcase">
-          <img 
-            src="/images/2025-12-18-2018.jpg" 
-            alt="Chicken Road Game" 
-            class="game-image"
-          />
-        </div>
+        <!-- Removed game image showcase section entirely -->
 
         <!-- Terminal-style visual -->
         <div class="terminal">
@@ -300,18 +281,19 @@
             <div class="terminal-dot dot-yellow"></div>
           </div>
           <div class="terminal-content">
+            <!-- Translated terminal content to Vietnamese -->
             <div class="terminal-line">
               <svg class="terminal-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/>
               </svg>
-              <span>Real-time predictions</span>
+              <span>Dự đoán thời gian thực</span>
             </div>
             <div class="terminal-line">
               <svg class="terminal-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <rect width="18" height="11" x="3" y="11" rx="2" ry="2"/>
                 <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
               </svg>
-              <span>Exclusive strategies</span>
+              <span>Chiến lược độc quyền</span>
             </div>
             <div class="terminal-line">
               <svg class="terminal-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -320,7 +302,7 @@
                 <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
                 <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
               </svg>
-              <span>Private community</span>
+              <span>Cộng đồng riêng tư</span>
             </div>
           </div>
         </div>
@@ -328,12 +310,14 @@
         <!-- Urgency element -->
         <div class="urgency">
           <div class="pulse-dot"></div>
-          <span class="urgency-text">Only 18 spots available</span>
+          <!-- Translated urgency text to Vietnamese -->
+          <span class="urgency-text">Chỉ còn 18 chỗ</span>
         </div>
 
         <!-- CTA Button -->
+        <!-- Translated CTA button to Vietnamese -->
         <a href="https://t.me/yourchannel" class="cta-button" target="_blank" rel="noopener noreferrer">
-          Get Access Now
+          Nhận Quyền Truy Cập Ngay
         </a>
       </div>
     </main>
